@@ -1,58 +1,0 @@
-name: CentOS - Core
-
-on:
-  release:
-    types: [published]
-  # pull_request:
-
-jobs:
-  build-core-centos:
-    runs-on: ubuntu-latest
-    container: symless/synergy-vcpkg:${{ matrix.distro }}
-    env:
-      GIT_COMMIT: ${{ github.sha }}
-      SYNERGY_NO_LEGACY: "1"
-      SYNERGY_NO_TESTS: "1"
-      SYNERGY_STATIC_OPENSSL: "1"
-      VCPKG_LIBRARY_LINKAGE: "static"
-    defaults:
-      run:
-        shell: bash
-    strategy:
-      matrix:
-        distro:
-          # - centos7.6
-          - centos8
-
-    name: ${{ matrix.distro }}
-
-    steps:
-      - uses: actions/checkout@v2
-
-      - name: Build
-        run: |
-          mkdir build
-          cd build
-          cmake3 \
-            -DCMAKE_BUILD_TYPE=Release \
-            -DCMAKE_INSTALL_PREFIX:PATH=$(pwd)/rpm/BUILDROOT/usr \
-            -DCMAKE_TOOLCHAIN_FILE=${VCPKG_INSTALLATION_ROOT}/scripts/buildsystems/vcpkg.cmake \
-            ..
-          . ./version
-          make -j
-
-      - uses: shallwefootball/s3-upload-action@master
-        if: "github.event_name == 'release'"
-        with:
-          aws_key_id: ${{ secrets.AWS_S3_UPLOAD_KEY_ID }}
-          aws_secret_access_key: ${{ secrets.AWS_S3_UPLOAD_SECRET }}
-          aws_bucket: ${{ secrets.AWS_BUCKET }}
-          source_dir: ./build/bin
-          destination_dir: "./synergy3/latest/${{matrix.distro}}/"
-
-      - uses: actions/upload-artifact@v2
-        if: "github.event_name == 'pull_request'"
-        with:
-          name: ${{ matrix.distro }}
-          path: build/bin/*
-          retention-days: 1
