@@ -146,18 +146,18 @@ steps:
 
   - task: CopyFilesOverSSH@0
     inputs:
-      sshEndpoint: 'Azure on Sandor'
+      sshEndpoint: 'Binary Storage'
       sourceFolder: './standard_package'
       contents: '*'
-      targetFolder: 'synergy-core/v1-core-standard/$(SYNERGY_VERSION)/$(SYNERGY_VERSION_STAGE)/b$(SYNERGY_VERSION_BUILD)-$(SYNERGY_REVISION)/'
+      targetFolder: '$(BINARIES_DIR)/v1-core-standard/$(SYNERGY_VERSION)/$(SYNERGY_VERSION_STAGE)/b$(SYNERGY_VERSION_BUILD)-$(SYNERGY_REVISION)/'
       readyTimeout: '20000'
-    displayName: 'Send standard Package to sandor'
+    displayName: 'Send standard package to Binary Storage'
 
   - task: CopyFilesOverSSH@0
     inputs:
-      sshEndpoint: 'Azure on Sandor'
+      sshEndpoint: 'Binary Storage'
       sourceFolder: './enterprise_package'
       contents: '*'
-      targetFolder: 'synergy-core/v1-core-enterprise/$(SYNERGY_VERSION)/$(SYNERGY_VERSION_STAGE)/b$(SYNERGY_VERSION_BUILD)-$(SYNERGY_REVISION)/'
+      targetFolder: '$(BINARIES_DIR)/v1-core-enterprise/$(SYNERGY_VERSION)/$(SYNERGY_VERSION_STAGE)/b$(SYNERGY_VERSION_BUILD)-$(SYNERGY_REVISION)/'
       readyTimeout: '20000'
-    displayName: 'Send enterprise Package to sandor'
+    displayName: 'Send enterprise package to Binary Storage'
